--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=4bcf108b037f686ac7859bdb05de1aaf
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/navire"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
