Fin du TP Symfony : Doctrine

--- a/.env
+++ b/.env
@@ -25,8 +25,18 @@ APP_SECRET=4bcf108b037f686ac7859bdb05de1aaf
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+
 DATABASE_URL="mysql://root:@127.0.0.1:3306/navire"
+
 ###< doctrine/doctrine-bundle ###
+
+DATABASE_USER=usernavire
+DATABASE_PWD=usernavire
+DATABASE_NAME=navire
+DATABASE_HOST=localhost
+
+DATABASE_CREATOR_USER=databasecreator
+DATABASE_CREATOR_PWD=databasecreator
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
